--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/my_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=bestuser
-spring.datasource.password=bestuser
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/my_db?useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:bestuser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:bestuser}
